# mrtd

./: README.md  mrtd.py  pyproject.toml
mrtd/: cli.py  mrz.py
src/mrtd/: __init__.py
tests/: test_mrz.py
