[project]
name = "mrtd"
version = "0.1.0"
description = "Parse Machine Readable Travel Documents (MRTDs)"
authors = [
    { name = "bollard", email = "358225+bollard@users.noreply.github.com" }
]
license = "Proprietary"
readme = "README.md"
requires-python = ">=3.11"

[scripts]
check = "mrtd.cli:main"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
extend-select = ["I"] # isort

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
