[project]
name = "mrtd"
version = "0.1.0"
description = "Parse Machine Readable Travel Documents (MRTDs)"
authors = [
    { name = "bollard", email = "358225+bollard@users.noreply.github.com" }
]
license = "Proprietary"
readme = "README.md"
requires-python = ">= 3.11"

[project.scripts]
check = "mrtd.cli:main"

[tool.poetry]
requires-poetry = ">= 2.0"
packages = [
    { include = "mrtd", from = "src" }
]

[tool.poetry.group.dev.dependencies]
ruff = ">= 0.11"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
extend-select = ["I"] # isort

[build-system]
requires = ["poetry-core >= 2.0"]
build-backend = "poetry.core.masonry.api"
